# infrahub-demo-sp

./: .env.example  .gitignore  .infrahub.yml  .rumdl.toml  .vale.ini  .yamllint.yml  AGENTS.md  README.md  docker-compose.override.yml  pyproject.toml  tasks.py
.github/: dependabot.yml  file-filters.yml  labeler.yml
.github/workflows/: ci.yml  sync-docs.yml  update-infrahub-sdk.yml  update-infrahub.yml
batfish_runner/: Dockerfile  __init__.py  app.py  requirements.txt
checks/: __init__.py  backbone_session_count.py  batfish_backbone.py  batfish_common.py  batfish_helpers.py  intent_immutability.py  intent_pool_capacity.py  l3vpn_overlap.py  l3vpn_site_subnet.py  pe_interface_alloc.py  sdwan_id_overlap.py  sdwan_site_subnet.py
docs/: AGENTS.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
generators/: __init__.py  common.py  generate_l3vpn.py  generate_sdwan.py  schema_protocols.py
menus/: menu.yml
objects/: 00_manufacturers.yml  10_locations.yml  20_asns.yml  30_platforms.yml  40_device_types.yml  50_pools.yml  55_groups.yml  60_backbone.yml  70_topology.yml  80_l3vpn.yml
scripts/: __init__.py  fetch_artifact.py  fetch_lab_configs.py  push_arista.py  regenerate_artifacts.py  run_generator.py  smoke_create_l3vpn.py
service_catalog/: Dockerfile  Home.py  __init__.py  requirements.txt
templates/: _macros.j2  clab_topology.j2  pe_arista_eos.j2  pe_cisco_iosxr.j2  pe_juniper_junos.j2  pe_nokia_srlinux.j2  pe_nokia_sros.j2  sdwan_versa.j2  sdwan_viptela.j2
transforms/: pe_nokia_srlinux.py  sdwan_versa.py  sdwan_viptela.py
(+91 files in other folders)
