[project]
name = "sp-demo-mpls-l3vpn"
version = "0.1.0"
description = "Infrahub demo: multi-vendor MPLS backbone with L3VPN as a service"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [{name = "OpsMill"}]

dependencies = [
    "infrahub-sdk[all]>=1.15.1,<2.0.0",
    "jinja2>=3.1.3",
    "pyyaml>=6.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "invoke>=2.2.0",
    "yamllint>=1.35.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generators", "transforms", "checks"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "D"]
ignore = ["D203", "D213", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]
"scripts/*" = ["D"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-vv --strict-markers"

[tool.coverage.run]
source = ["generators", "transforms", "checks", "service_catalog/utils"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 70
